# llm-grammar-assistant

./: .gitignore  CLAUDE.md  README.md
.specify/memory/: constitution.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/commands/: check.rs  config.rs  fix.rs  mod.rs
cli/src/models/: config.rs  edit.rs  mod.rs
cli/src/output/: human.rs  json.rs  mod.rs
cli/src/providers/: cloud.rs  mod.rs  ollama.rs  prompts.rs
cli/src/services/: chunker.rs  credentials.rs  diff.rs  mod.rs  position.rs  validator.rs
cli/tests/fixtures/sample_texts/: clean_text.txt  grammar_errors.txt  style_issues.txt
extension/: manifest.json  package-lock.json  package.json  popup.html  tsconfig.json  tsconfig.node.json  vite.config.ts
extension/public/: content.css
extension/src/background/: service-worker.ts
extension/src/content/: FixPopup.tsx  FloatingButton.tsx  HighlightOverlay.tsx  index.tsx
extension/src/popup/: Popup.tsx
extension/src/providers/: cloud.ts  index.ts  ollama.ts  prompts.ts
extension/src/store/: useGrammarStore.ts
extension/src/types/: config.ts  edit.ts
extension/src/utils/: crypto.ts  diffApplier.ts  positionMapper.ts  storage.ts
shared/schemas/: llm-response.schema.json
specs/001-grammar-checker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-grammar-checker/checklists/: requirements.md
