[package]
name = "grammar-check"
version = "0.1.0"
edition = "2021"
description = "CLI tool for grammar checking using LLMs (local Ollama or cloud APIs)"
license = "MIT"
authors = []

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config file format
toml = "0.8"

# OS credential storage
keyring = { version = "3.6", features = ["apple-native"] }

# Terminal output
colored = "2.1"

# Platform-specific config paths
directories = "5.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Unicode handling
unicode-segmentation = "1.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[lints.clippy]
unwrap_used = "deny"
